# pharmparser

./: .gitignore  App.py  ButtonInjector.py  ParserEngine.py  README.md  config.json  config.json.example  main.py  pyproject.toml  requirements.txt
core/: parser_engine.py
excel/: __init__.py  spreadsheet.py
excel/formatters/: __init__.py  analysis_formatter.py  base_formatter.py  data_formatter.py
excel/macros/: __init__.py  apply_filters_macro.py  button.py  button_injector.py  macro.py  macros.py  remove_filters_macro.py  sort_macro.py
src/: AnalysisFormatter.py  App.py  ApplyFiltersMacro.py  Button.py  ButtonInjector.py  DataFormatter.py  Entry.py  FilterCriteria.py  Macro.py  ParserEngine.py  Profile.py  ProfileSelector.py  RemoveFiltersMacro.py  Request.py  SheetFormatter.py  SortMacro.py  SortOrder.py  Spreadsheet.py  datatypes.py  main.py  parser.py  requirements.txt  settings.py
src/core/: ParserEngine.py  __init__.py  parser_engine.py
src/excel/: Spreadsheet.py  __init__.py  spreadsheet.py
src/excel/formatters/: AnalysisFormatter.py  DataFormatter.py  SheetFormatter.py  __init__.py  analysis_formatter.py  base_formatter.py  data_formatter.py
src/excel/macros/: ApplyFiltersMacro.py  Button.py  ButtonInjector.py  Macro.py  RemoveFiltersMacro.py  SortMacro.py  (+2 more)
src/ui/: App.py  Profile.py  ProfileSelector.py  __init__.py  app.py
src/utils/: Request.py  __init__.py  settings.py  utils.py
ui/: __init__.py  app.py  entry.py  profile.py  profile_selector.py
utils/: __init__.py  datatypes.py  file_utils.py  request.py  utils.py  widgets.py
