[project]
name = "pharmparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "altgraph>=0.17.4",
    "beautifulsoup4>=4.13.4",
    "certifi>=2025.7.14",
    "charset-normalizer>=3.4.2",
    "ctkmessagebox>=2.7",
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "et-xmlfile>=2.0.0",
    "idna>=3.10",
    "lxml>=6.0.0",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pefile>=2023.2.7",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pyinstaller>=6.14.2",
    "pyinstaller-hooks-contrib>=2025.6",
    "pywin32>=311",
    "pywin32-ctypes>=0.2.3",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "soupsieve>=2.7",
    "typing-extensions>=4.14.1",
    "urllib3>=2.5.0",
]
